# LipSynth

./: .gitignore  Lip2Wav_Inference.ipynb  README.md  benchmarks.ipynb  pyproject.toml
LipVoicer/: BENCHMARKS.md  CHANGES.md
LipVoicer/benchmark_outputs/reports/: bench_20260316_172621_meta.json  bench_20260316_172621_per_clip.csv  bench_20260316_172621_per_clip.json  bench_20260316_172621_summary.json  bench_20260316_181304_meta.json  bench_20260316_181304_per_clip.csv  bench_20260316_181304_per_clip.json  bench_20260316_181304_summary.json
Pipeline/: README.md  pyproject.toml
Pipeline/docs/: architecture.md  environment.md
Pipeline/notebooks/: stage1_lipvoicer_eval.ipynb  stage2_lipvoicer_finetune.ipynb
Pipeline/scripts/: infer.py  stage1_pretrained_eval.py  stage1_train_ctc.py  stage2_evaluate.py
dataset_pipeline/: .env  00_fetch_playlist.py  01_download_videos.py  02_segment_clips.py  03_extract_lip_roi.py  03_extract_visual_features.py  04_finalize_dataset.py  README.md  pipeline.ipynb  pipeline.yml  pipeline_utils.py  utils.py
dataset_pipeline/checkpoints/: lipsynth_pipeline_checkpoint.json
dataset_pipeline/docs/: utils.md
